--- a/player-dashboard/Gemfile
+++ b/player-dashboard/Gemfile
@@ -15,6 +15,7 @@ gem 'pry-byebug'
 gem 'annotate'
 # See https://github.com/rails/execjs#readme for more supported runtimes
 # gem 'therubyracer', platforms: :ruby
+gem 'will_paginate'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
